<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">haello</string>
    
    <string name="title_activity_main">haello</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_retry">Retry</string>

    <!-- Tabs -->
    <string name="imageButton_take_image_camera">TAP TO TAKE IMAGE WITH CAMERA</string>
    <string name="imageButton_choose_image_gallery">TAP TO CHOOSE IMAGE FROM GALLERY</string>

    <!-- Translation Settings -->
    <string name="textView_correct_mistakes_manually">CORRECT MISTAKES MANUALLY</string>
    <string name="textView_translation_settings">TRANSLATION SETTINGS</string>
    <string name="imageButton_from">FROM</string>
    <string name="imageButton_to">TO</string>
    <string name="imageButton_show_chosen_image">EDIT\nIMAGE</string>

    <!-- Start Activity Buttons -->
    <string name="button_go">GO</string>
    <string name="button_correct_and_retry">CORRECT AND RETRY</string>
    <string name="button_retry">RETRY</string>
    <string name="textView_loading">LOADING</string>
    <string name="button_wikipedia">WIKIPEDIA</string>
    <string name="button_wiktionary">WIKTIONARY</string>
    <string name="button_google">GOOGLE</string>

    <!-- Content Descriptions -->
    <string name="imageButton_choose_image_camera_content_description">Take image. Tap to take image with camera.</string>
    <string name="imageButton_choose_image_gallery_content_description">Choose image. Tap to choose image from gallery.</string>
    <string name="imageView_chosen_image_content_description">Chosen image. Tap to open and view.</string>

</resources>
