<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA" >

    <ScrollView
        android:id="@+id/edit_original_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E8E8E8"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/settings_textView"
        android:isScrollContainer="false">

        <EditText
            android:id="@+id/edit_original_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="5dp"
            android:background="#00000000"
            android:textColor="#696969"
            android:textSize="16sp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp" />

    </ScrollView>

    <TextView
        android:id="@+id/settings_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_translation_settings"
        android:textColor="#696969"
        android:textSize="12sp"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/to_language_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/from_language_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imageButton_from"
        android:textSize="13sp"
        android:textColor="#FAFAFA"
        android:background="@drawable/from_language_button_not_clickable"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/to_language_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imageButton_to"
        android:textSize="13sp"
        android:textColor="#FAFAFA"
        android:background="@drawable/to_language_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:onClick="showTranslateToDialog"
        android:layout_centerHorizontal="true" />

</RelativeLayout>